# SBT-presale

./: .gitignore  README.md  SETUP_GUIDE.md  package-lock.json
backend/: .env.example  Cargo.toml  README.md  package-lock.json  package.json  server.js
backend/migrations/: 001_initial_schema.sql
backend/src/: main.rs
backend/src/handlers/: mod.rs
backend/src/models/: mod.rs  transaction.rs  user.rs
backend/src/services/: mod.rs  solana_service.rs
backend/src/utils/: mod.rs
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  config.js  main.jsx  registerSW.js  styles.css  tailwind.css
frontend/src/components/: AnalyticsDashboard.jsx  ErrorBoundary.jsx  FloatingActionButton.jsx  LoadingSkeleton.jsx  MobileBottomNav.jsx  MobileNavDemo.jsx  MobileWalletGuide.jsx  Navbar.jsx  PriceCalculator.jsx  ReferralSystem.jsx  ThemeToggle.jsx  TokenStats.jsx  TransactionHistory.jsx  TransactionReceipt.jsx  WalletInfo.jsx  WalletTest.jsx  WelcomeModal.jsx  WhitelistStatus.jsx
frontend/src/hooks/: useWallet.js
frontend/src/pages/: AboutPage.jsx  CommunityPage.jsx  FeaturesPage.jsx  HomePage.jsx
frontend/src/styles/: mobile.css
frontend/src/utils/: devConfig.js  walletUtils.js
