[package]
name = "shibartum_presale_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
anyhow = "1.0"
actix-files = "0.6"
env_logger = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Security & Rate Limiting
actix-web-lab = "0.20"
actix-governor = "0.5"
bcrypt = "0.15"
jsonwebtoken = "9.2"

# Solana Integration
solana-client = "1.18"
solana-sdk = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }
